# jekko-jailgun

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  jankurai.yml  security.yml
agent/: JANKURAI_STANDARD.md  badge.toml  boundaries.toml  generated-zones.toml  jankurai-badge.json  owner-map.json  proof-lanes.toml  repo-score.json  repo-score.md  standard-version.toml  test-map.json  tool-adoption.toml  ux-qa.toml
agent/zyal/: README.md
apps/browser-adapter/: package.json  tsconfig.json  vitest.config.ts
apps/browser-adapter/src/: chatUpload.test.ts  chatUpload.ts  domContracts.fixtures.test.ts  domContracts.test.ts  domContracts.ts  index.ts  sourceArchive.create.test.ts  sourceArchive.fullMode.test.ts  sourceArchive.testSupport.ts  sourceArchive.ts  sourceArchive.validation.test.ts
apps/chrome-bridge/: cdp-recovery-smoke.env  package.json
apps/dashboard/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/dashboard/src/: App.drilldown.test.tsx  App.fixture.test.tsx  App.render.test.tsx  App.testSupport.ts  App.tsx  App.websocket.test.tsx  api.ts  fixtures.ts  main.tsx  styles.css  types.ts  useDashboardData.ts
apps/fake-chatgpt/: package.json
apps/fake-chatgpt/src/: routes.mjs  server.mjs  state.mjs
apps/fake-chatgpt/test/: server.test.mjs
config/: browser-profiles.env.example  jailgun.example.toml
contracts/: AGENTS.md  README.md
contracts/fixtures/events/: auth-action-needed.json  auth-code-requested.json  auth-code-submitted.json  auth-complete.json  auth-failed.json  auth-state.json  browser-log.json  deploy-finished.json  deploy-queued.json  download-receipt.json  error.json  prompt-policy-deny.json  prompt-submitted.json  rate-limit-detected.json  remote-safety.json  run-started.json  session-expired.json  tab-opened.json  (+1 more)
contracts/json-schema/: event.schema.json
crates/domain/: observability.md
crates/jailgun-cli/: Cargo.toml
crates/jailgun-cli/src/: agent.rs  cli.rs  jailhard.rs  lib.rs  main.rs
crates/jailgun-cli/src/auth/: bridge.rs  events.rs  mod.rs  session.rs
crates/jailgun-cli/src/commands/: deploy.rs  mod.rs  review.rs  run.rs  server.rs  telegram.rs  tests.rs  validate.rs
crates/jailgun-cli/src/jailhard/: archive.rs  browser.rs  git.rs  prompt.rs  review.rs  scope.rs  tests.rs  util.rs
crates/jailgun-core/: Cargo.toml
crates/jailgun-core/src/: agent_error.rs  config.rs  event.rs  lib.rs  prompt_policy.rs  receipt.rs  repo_policy.rs  run.rs  source_archive.rs  tarball.rs
crates/jailgun-core/src/agent/: mod.rs  request.rs  summary.rs  tests.rs
crates/jailgun-core/src/browser_registry/: account.rs  ids.rs  leases.rs  mod.rs  registry.rs  storage.rs  tests.rs
crates/jailgun-core/src/browser_registry/leases/: lock.rs  tests.rs
crates/jailgun-core/src/tarball/: candidates.rs  error.rs  tests.rs  types.rs  validation.rs
crates/jailgun-core/tests/: browser_account_id_properties.rs
crates/jailgun-deploy/: Cargo.toml
crates/jailgun-deploy/src/: ci.rs  cleanup.rs  deploy.rs  fake.rs  job.rs  launcher.rs  lib.rs  shell.rs  upload.rs  util.rs
crates/jailgun-deploy/src/deploy/: events.rs  model.rs  receipt.rs  runtime.rs
crates/jailgun-deploy/src/fake/: ci_tracker.rs  git.rs  job.rs  outcome.rs  receipt.rs  upload.rs
crates/jailgun-deploy/src/launcher/: script.rs  status.rs  tests.rs
crates/jailgun-deploy/src/shell/: ci_tracker.rs  git.rs  job.rs  upload.rs
crates/jailgun-deploy/tests/: cleanup_block_policy.rs  cleanup_failure_guards.rs  cleanup_preserve_reset.rs  deploy_dry_run.rs  deploy_failed_preserved.rs  deploy_success.rs  deploy_upload_sha_mismatch.rs  fake_e2e_ci_failure.rs  fake_e2e_command_failure.rs  fake_e2e_dry_run.rs  fake_e2e_success.rs
crates/jailgun-deploy/tests/support/: mod.rs
crates/jailgun-notify/: Cargo.toml
crates/jailgun-notify/src/: commit.rs  lib.rs  notice.rs  subscriber.rs  telegram.rs
crates/jailgun-orchestrator/: Cargo.toml
crates/jailgun-orchestrator/src/: config.rs  errors.rs  lib.rs  support.rs
crates/jailgun-orchestrator/src/agent/: account_tests.rs  accounts.rs  execute.rs  execute_summary.rs  mod.rs  prepare.rs  prepare_env.rs  review.rs  tests.rs
crates/jailgun-orchestrator/src/bridge/: command.rs  mod.rs  protocol.rs  reader.rs  spawn.rs  writer.rs
crates/jailgun-orchestrator/src/bridge/event/: mod.rs  payload.rs  tests.rs
crates/jailgun-orchestrator/src/run/: bridge_events.rs  bridge_flow.rs  deploy.rs  deploy_queue.rs  events.rs  launch.rs  mod.rs  publish.rs  tab.rs  tests.rs  timing.rs  tracker.rs
crates/jailgun-orchestrator/src/run/deploy_queue/: tests.rs
crates/jailgun-server/: Cargo.toml
crates/jailgun-server/src/: bus.rs  lib.rs  mcp.rs  routes.rs  state.rs  ws.rs
crates/jailgun-server/src/browser/: mod.rs  registry.rs
crates/jailgun-server/src/browser/auth/: bridge.rs  driver.rs  mod.rs
crates/jailgun-server/src/mcp/: protocol.rs  tools.rs
crates/jailgun-server/src/runs/: events.rs  ingress.rs  mod.rs  queries.rs
crates/jailgun-server/src/tests/: browser_routes.rs  mcp_routes.rs  mod.rs  run_routes.rs  status_routes.rs
db/: AGENTS.md  README.md
db/constraints/: 0001_checks.sql  README.md
db/migrations/: 0001_init.sql  README.md
docs/: HEADLESS_TWO_ACCOUNT_SETUP.md  architecture.md  cost-budgets.md  release.md  testing.md
docs/jailgun/: HEADLESS_TWO_ACCOUNT_SETUP.md  JAILGUN_AGENTS.md  Justfile.jailgun  agent-native-standard.md  architecture.md  boundaries.md  ci-local.md  release.md
ops/: AGENTS.md
ops/ci/: build.sh  check.sh  contracts.sh  db.sh  e2e.sh  fast.sh  jankurai.sh  node.sh  quality-gates.sh  rust.sh  test.sh
ops/observability/: README.md  telemetry.jsonl
prompts/examples/: info-only-research.txt  jekko-super-dummy.txt
scripts/: chrome-cdp-launchd.sh  chrome-cdp-tunnel.sh  ci-doctor.sh  ci-local.sh  generate-contracts.mjs  render-dashboard-ux-qa.mjs
src/: lib.rs
test-fixtures/: jailgun.test.toml
tests/: identity.rs
tools/: security-lane.sh
(+47 files in other folders)
