[package]
name = "jekko-jailgun"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[workspace]
members = [
    ".",
    "crates/domain",
    "crates/jailgun-core",
    "crates/jailgun-deploy",
    "crates/jailgun-notify",
    "crates/jailgun-orchestrator",
    "crates/jailgun-server",
    "crates/jailgun-cli",
]
resolver = "2"

# Inherited by the jailgun-* crates via `<field>.workspace = true`.
[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/neverhuman/jekko-jailgun.git"
rust-version = "1.95"

# Ported verbatim from jailgun so the jailgun-* crates resolve `<dep>.workspace = true`.
[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "serde"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
proptest = "1"
