[package]
name = "jailgun-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jailgun"
path = "src/main.rs"

[[bin]]
name = "jailhard"
path = "src/bin/jailhard.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
flate2.workspace = true
jailgun-core = { path = "../jailgun-core" }
jailgun-deploy = { path = "../jailgun-deploy" }
jailgun-notify = { path = "../jailgun-notify" }
jailgun-orchestrator = { path = "../jailgun-orchestrator" }
jailgun-server = { path = "../jailgun-server" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
