[package]
name = "jailgun-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
