[package]
name = "jailgun-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
async-trait.workspace = true
futures.workspace = true
jailgun-core = { path = "../jailgun-core" }
jailgun-orchestrator = { path = "../jailgun-orchestrator" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
